Created controller to manage roles
